# OCSTrack

./: .pylintrc  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  lint.yml  publish-to-pypi.yml  publish.yml  run-tests.yml
docs/: api.md  collocation.md  index.md  model.md  observation.md  utils.md
examples/: Plot_Collocated.ipynb  WW3_SatAlt.py
model_sat/: utils.py
model_sat/Collocation/: collocate.py  spatial.py  temporal.py
ocstrack/: _version.py  utils.py
ocstrack/Collocation/: collocate.py  output.py  spatial.py  temporal.py
ocstrack/Model/: model.py
ocstrack/Observation/: argofloat.py  get_argo.py  get_sat.py  urls.py
ocstrack/Satellite/: get_sat.py  satellite.py  urls.py
tests/: test_get_argo.py  test_get_sat.py  test_model.py  test_roms.py  test_spatial.py  test_ww3.py
