[build-system]
requires = [
  "setuptools>=64",
  "setuptools_scm[toml]>=8",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ocstrack"
dynamic = ["version"]
description = "Satellite data download, crop, and collocation with model outputs"
authors = [
    { name = "Felicio Cassalho", email = "felicio.cassalho@noaa.gov" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
dependencies = [
    "numpy",
    "xarray",
    "scipy",
    "tqdm",
    "requests",
    "netcdf4",
    "h5netcdf",
    "dask"
]

[project.urls]
Homepage = "https://github.com/noaa-ocs-modeling/OCSTrack"
Repository = "https://github.com/noaa-ocs-modeling/OCSTrack"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pylint",
    "pytest-cov",
]

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
write_to = "ocstrack/_version.py"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
